--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/core": "^10.0.15",
     "@emotion/styled": "^10.0.15",
     "gatsby": "^2.13.50",
+    "gatsby-plugin-emotion": "^4.1.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
