--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "@emotion/styled": "^10.0.15",
     "gatsby": "^2.13.50",
     "gatsby-plugin-emotion": "^4.1.2",
+    "gatsby-plugin-react-helmet": "^3.1.3",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.1",
+    "react-icons": "^3.7.0"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
