--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@emotion/core": "^10.0.15",
     "@emotion/styled": "^10.0.15",
+    "@material-ui/core": "^4.3.1",
+    "formik": "^1.5.8",
     "gatsby": "^2.13.50",
     "gatsby-plugin-emotion": "^4.1.2",
     "gatsby-plugin-react-helmet": "^3.1.3",
